docs : fix some swagger API docs
