# docs/swagger.yaml
@@ -1,4 +1,4 @@
-basePath: /API/v1
+basePath: /
 definitions:
   dto.GetCommentResponse:
     properties:
@@ -186,6 +186,15 @@ definitions:
         type: string
       password:
         example: secret
+        type: string
+    type: object
+  dto.UserUpdateRequest:
+    properties:
+      email:
+        example: monday.day@weeekly.com
+        type: string
+      username:
+        example: monday
         type: string
     type: object
 host: localhost:8080
@@ -472,7 +481,7 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Create new Users
+      description: Delete Current User
       parameters:
       - description: Bearer Token
         in: header
@@ -488,7 +497,30 @@ paths:
             $ref: '#/definitions/dto.GetUserResponse'
       security:
       - BearerAuth: []
-      summary: Create new User
+      summary: Delete Current User
+      tags:
+      - Users
+    put:
+      consumes:
+      - application/json
+      description: User update
+      parameters:
+      - description: body request for user update
+        in: body
+        name: dto.UserUpdateRequest
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.GetUserResponse'
+      security:
+      - BearerAuth: []
+      summary: User update
       tags:
       - Users
   /users/login:
